# PyPortfolioOpt

./: README.md  pyproject.toml
.github/workflows/: main.yml
pypfopt/: discrete_allocation.py  plotting.py
tests/: test_efficient_cdar.py  test_efficient_cvar.py  test_efficient_frontier.py  test_efficient_semivariance.py  test_plotting.py
